Fixed misaligned sold out banner
git-svn-id: https://192.168.1.50:9880/easyshop_svn/trunk@2931 2929c1f8-612a-3548-b275-2a983e7c7391

--- a/web/assets/css/product_search_category.css
+++ b/web/assets/css/product_search_category.css
@@ -783,7 +783,7 @@ Advanced Search Filters
     left: 0;
     line-height: 50px;
     position: absolute;
-    top: 110px;
+    top: 110px !important;
     width: 100%;
     z-index: 3;
 }
